--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- /* *{
+ *{
     font-family: 'Roboto Mono', monospace;
     font-weight: bolder;
 }
@@ -17,9 +17,8 @@ h1{
 }
 
 #formulario{
-    position: absolute;
-    float: center;
-    left:45%;
+    position: relative;
+    max-width: fit-content;
     margin-top: 20px;
     border-style:double;
     padding-top: 20px;
@@ -28,7 +27,6 @@ h1{
     border-radius: 28px;
     border-color: rgb(251, 209, 88);
     background-color: rgb(251, 209, 88);
-
 }
 label{
     color:rgb(34, 191, 136);
@@ -36,9 +34,24 @@ label{
     margin: 20px;
     text-shadow: 2px 1px 0.2px black;
 }
+#genera{
+    margin-top: 15px;
+    color:black;
+    text-shadow: none;
+}
+
+button{ 
+    margin: 10px 0px 5px 20px;
+}
 input{
     margin-left: 20px;
 }
+
+input > radio{
+    margin:2px
+}
+
+
 #finalizar{
     margin-left:25%;
     margin-bottom: 10px;
@@ -47,4 +60,4 @@ input{
     -moz-border-radius: 28;
     border-radius: 28px;
     background-color:rgb(34, 191, 136);
-}  */
+} 
